--- a/templates/test.html
+++ b/templates/test.html
@@ -4,5 +4,6 @@
     <body>
         <h1>This is header</h1>
         <p>This is a paragraph</p>
+        <p>This is second a paragraph</p>
     </body>
 </html>
